deployment/ota-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ota-service
  namespace: device-manager
  labels:
    app: ota-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ota-service
  template:
    metadata:
      labels:
        app: ota-service
    spec:
      containers:
      - image: petewall/ota-service
        name: ota-service
---
apiVersion: v1
kind: Service
metadata:
  name: ota-service
  namespace: device-manager
  labels:
    app: ota-service
spec:
  type: ClusterIP
  selector:
    app: ota-service
  ports:
  - port: 5053
    protocol: TCP
    targetPort: 5053
