deployment/device-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service-db
  namespace: device-manager
  labels:
    app: device-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-service-db
  template:
    metadata:
      labels:
        app: device-service-db
    spec:
      containers:
      - name: redis
        image: redis:6.2-alpine
        command: ['redis-server', '--save', '60', '1']
        volumeMounts:
        - mountPath: /data
          name: device-service-db-storage
      volumes:
        - name: device-service-db-storage
          persistentVolumeClaim:
            claimName: device-service-db-storage
---
apiVersion: v1
kind: Service
metadata:
  name: device-service-db
  namespace: device-manager
  labels:
    app: device-service-db
spec:
  selector:
    app: device-service-db
  type: ClusterIP
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service
  namespace: device-manager
  labels:
    app: device-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-service
  template:
    metadata:
      labels:
        app: device-service
    spec:
      containers:
      - image: petewall/device-service
        name: device-service
---
apiVersion: v1
kind: Service
metadata:
  name: device-service
  namespace: device-manager
  labels:
    app: device-service
spec:
  ports:
  - port: 5050
    protocol: TCP
    nodePort: 30050
    targetPort: 5050
  selector:
    app: device-service
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: device-service
  namespace: device-manager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lab.petewall.net
    http:
      paths:
      - path: /device
        pathType: Exact
        backend:
          service:
            name: device-service
            port:
              number: 5050
