deployment/firmware-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firmware-service
  namespace: device-manager
  labels:
    app: firmware-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firmware-service
  template:
    metadata:
      labels:
        app: firmware-service
    spec:
      containers:
      - image: petewall/firmware-service
        name: firmware-service
        volumeMounts:
        - mountPath: "/var/data"
          name: firmware-store
      volumes:
        - name: firmware-store
          persistentVolumeClaim:
            claimName: firmware-store
---
apiVersion: v1
kind: Service
metadata:
  name: firmware-service
  namespace: device-manager
  labels:
    app: firmware-service
spec:
  ports:
  - port: 5051
    protocol: TCP
    nodePort: 30051
    targetPort: 5051
  selector:
    app: firmware-service
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firmware-service
  namespace: device-manager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lab.petewall.net
    http:
      paths:
      - path: /firmware
        pathType: Exact
        backend:
          service:
            name: firmware-service
            port:
              number: 5051
